<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Entertainment</string>
    <string name="tab_text_movie">Movie</string>
    <string name="tab_text_tv_show">TV Show</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="appversion">App Version 0.1</string>
    <string name="setting">Settings</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="showtimes">Jadwal Tayang</string>
    <string name="broadcaster_network">Jaringan Penyiar</string>
    <string name="runtime">Durasi</string>
    <string name="daterelase">Tanggal Rilis</string>
    <string name="title_movie">Title Movie</string>
    <string name="genre_movie">Genre</string>
    <string name="daterelease_movie">Date Release</string>
    <string name="title_tvShow">Title TV SHOW</string>
    <string name="genre_tvShow">Genre</string>
    <string-array name="data_title_movie">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed</item>
        <item>Deadpool 2</item>
        <item>Spider-Man: Far from Home</item>
        <item>Frozen II</item>
    </string-array>
    <string-array name="data_synopsis_movie">
        <item>"Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally's career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons."</item>
        <item>"Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm's half-human, half-Atlantean brother and true heir to the throne."</item>
        <item>"As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain."</item>
        <item>"Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety."</item>
        <item>"Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock 'n' roll band Queen in 1970. Hit songs become instant classics. When Mercury's increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess."</item>
        <item>"On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug."</item>
        <item>"Between personal obligations and training for his next big fight against an opponent with ties to his family's past, Adonis Creed is up against the challenge of his life."</item>
        <item>"Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy's life."</item>
        <item>"Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent."</item>
        <item>"Elsa, Anna, Kristoff and Olaf are going far in the forest to know the truth about an ancient mystery of their kingdom."</item>
    </string-array>
    <string-array name="date_release_movie">
        <item>3 October 2018</item>
        <item>21 Desember 2018</item>
        <item>23 April 2018</item>
        <item>12 November 2018</item>
        <item>30 October 2018</item>
        <item>21 December 2018</item>
        <item>14 November 2018</item>
        <item>10 May 2018</item>
        <item>26 June 2019</item>
        <item>7 November 2019</item>
    </string-array>
    <string-array name="data_runtime_movie">
        <item>2h 16m</item>
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>2h 1m</item>
        <item>2h 9m</item>
        <item>1h 44m</item>
    </string-array>
    <string-array name="data_genre_movie">
        <item>Drama, Music, Romance</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Science Fiction, Action, Adventure</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Science Fiction, Action, Adventure</item>
        <item>Drama</item>
        <item>Action, Adventure, Comedy</item>
        <item>Science Fiction, Action, Adventure</item>
        <item>Adventure, Animation, Comedy, Music, Family, Fantasy</item>
    </string-array>
    <string-array name="data_title_tvShow">
        <item>Ini Talk Show</item>
        <item>Tonight Show</item>
        <item>86</item>
        <item>Tukang Ojek Pengkolan</item>
        <item>Bocah Petualang</item>
        <item>Laptop Si Unyil</item>
        <item>Hitam Putih</item>
        <item>On The Spot</item>
        <item>Mata Najwa</item>
        <item>Spongebob Squarepants The Movie</item>
    </string-array>
</resources>